  inserted is already in the list.
  The default behaviour of GWEN_StringList_RemoveString is the same as before:
  It removes a matching string regardless of its reference counter.
  However, if GWEN_StringList_SetIgnoreRefCount() is called with a null
  argument only those strings are removed whose reference counter reaches
  zero.


2004/12/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- implemented FSLock at least for POSIX the way "man 2 open" suggests.
  This should now also work on NFS shares.


2004/12/03: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added simple file/folder locking mechanism
- started working on filters for GWEN_BUFFEREDIO. I used these kind of filters
  in AqBackup, but they weren't as sophisticated as the current ones are ;-)
  Fortunately I can now use the GWEN_RINGBUFFER functions...
  ------------------------------------------------------------------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------


2004/11/26: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added DBIO plugin for old OpenHBCI1-style config files


2004/11/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- csv plugin: 
  - implemented checkFile function
  - fixed a bug (now importing AqMoney2 CSV files works ;-)


2004/11/21: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- typemaker:
  - added property "volatile": if set then the element is not written to or
    read from a db
  - fixed some bugs: DOMAIN name was not prepended to function definitions 
    in header files
  - now _LIST2_dup() functions are created if LIST2 is enabled
  - now adds apidocs for automatically generated functions
- list(2): First() and Last() use const arguments now

