@@ -40,6 +40,7 @@ GWEN_LIST_FUNCTION_DEFS(GWEN_PLUGIN_MANAGER, GWEN_PluginManager)
 GWEN_ERRORCODE GWEN_Plugin_ModuleInit();
 GWEN_ERRORCODE GWEN_Plugin_ModuleFini();
 
+void GWEN_Plugin_Attach(GWEN_PLUGIN *p);
 
 
 
